<?xml version="1.0" encoding="utf-8"?>




<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbarbershop"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="138dp"
        android:layout_height="122dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/productShirt"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/product1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="138dp"
        android:layout_height="122dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/productJumper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/product4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="138dp"
        android:layout_height="122dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/productJumperBlack"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/product5" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="138dp"
        android:layout_height="122dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/productGelSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/product2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="138dp"
        android:layout_height="122dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/productShaveSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/product3" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="138dp"
        android:layout_height="120dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/productBarberSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/product6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="19dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="134dp"
        android:layout_height="18dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="136dp"
        android:layout_height="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="136dp"
        android:layout_height="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="137dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="135dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/productText5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.26" />
</android.support.constraint.ConstraintLayout>

